<resources>
    <string name="app_name">OneMonth</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="today_task">今日任务</string>
    <string name="future_task">未来任务</string>
    <string name="delay_task">任务延迟</string>
    <string name="setting">设置</string>
    <string name="share">分享</string>
    <string name="about">关于</string>
    <string name="custom">定制</string>

    <!-- TODO: Remove or change this placeholderk text -->
    <string name="hello_blank_fragment">Hello blankkkkkkkkkkk fragment</string>
    <string name="addclassify">添加分类</string>
    <string name="addClassify">添加一个分类</string>
    <string name="add_task">添加一个任务</string>
    <string name="noclassify">没有你要的分类？试着点击我添加一下吧</string>
    <string name="finish">已完成</string>
    <string name="unfinish">未完成</string>
    <string name="time_circle">时间周期：</string>
    <string name="to">至</string>
    <string name="task_days">任务总天数：</string>
    <string name="finish_days">   ，打卡天数：</string>
    <string name="target_days">   ，目标天数：</string>
    <string name="username">账号</string>
    <string name="enterpwd">请输入您的密码</string>
    <string name="login">登录</string>
    <string name="copy_to_clip">复制到剪切板</string>
    <string name="orc">文字识别</string>
    <string name="register">注册</string>
    <string name="register_acount">注册账号</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
