<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/timg"
    tools:context="com.mrgao.onemonth.view.LoginActivity"
    tools:layout_editor_absoluteY="81dp">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_password_repeat"
        android:layout_width="359dp"
        android:layout_height="50dp"
        android:layout_marginStart="26dp"

        android:layout_marginTop="42dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/rectbox"
        android:backgroundTint="@color/white"
        android:hint="@string/enterpwd"
        android:paddingStart="20dp"
        android:textColor="@color/main_color"
        android:textColorHint="@color/main_color"
        android:textSize="@dimen/text_commen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_username"
        android:layout_width="359dp"
        android:layout_height="50dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/rectbox"
        android:backgroundTint="@color/white"
        android:hint="@string/username"
        android:paddingStart="20dp"
        android:textColor="@color/main_color"
        android:textColorHint="@color/main_color"
        android:textSize="@dimen/text_commen"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_password"
        android:layout_width="359dp"
        android:layout_height="50dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/rectbox"
        android:backgroundTint="@color/white"
        android:hint="@string/enterpwd"
        android:paddingStart="20dp"
        android:textColor="@color/main_color"
        android:textColorHint="@color/main_color"
        android:textSize="@dimen/text_commen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />


    <TextView
        android:id="@+id/register"
        android:layout_width="359dp"
        android:layout_height="50dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="182dp"
        android:background="@drawable/rectbox"
        android:backgroundTint="@color/main_color"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/text_big"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
